# WebManager

./: LICENSE  README.md  pyproject.toml
src/WebManager/: Webpage.py  WebpageMeta.py  __init__.py
tests/: Webpage.py  __init__.py
